--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Reactable",
+  "name": "reactable",
   "version": "0.9.0",
   "description": "Fast, flexible, simple data tables in React",
   "repository": {
